[package]
name = "soraka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
minifb = "0.25.0"
wgpu = "0.18.0"
win_desktop_duplication = "0.10.7"
winapi = "0.3.9"
winit = "0.29.4"
tokio = { version = "1.35.0", features = ["full"] }
lazy_static = "1.4.0"
