[package]
name = "soraka"
description = "screen capture with raw replay buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win_desktop_duplication = "0.10.7"
tokio = { version = "1.35.0", features = ["full"] }
lazy_static = "1.4.0"
chrono = "0.4.31"
tray-icon = "0.11.1"
image = "0.24.7"
winit = "0.29.4"
global-hotkey = "0.4.1"
